Add styling for body, header, and navigation

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,58 @@
-content {
+body {
+background-color: #f4f4f4;
+font-family: Arial, sans-serif;
+}
+header{
+    position:sticky;
+    display:flex;
+    justify-content: flex-start;
+    gap:120px;
+    top:0;
+    background-color: #545454;
+    width:100%;
+    height: auto;
+    align-items:center;
+    font-size:large;
+    font-weight:bold;
+    color:white;
+    padding: 10px 10px 10px 30px;
+}
+header img{
+    width:100px;
+}
+nav{
+    display:flex;
+    gap:20px;
+}
+.navtext {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+}
+.navtext h2 {
+    margin: 0;           
+    margin-bottom: 5px; 
+    font-size: 1.5rem; 
+}
 
+.navtext h4 {
+    margin: 0;          
+    font-size: 1rem;     
+    color: #ddd;         
+}
+
+nav a{
+    text-decoration:none;
+    color:white;
+    transition: color 0.5s;
+    height:auto;
+}
+nav a:hover{
+    color:#ffcc00;
+}
+
+.banner{
+    width:100%;
+    height:auto;
 }
