--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,10 @@ nav a:hover{
     width:100%;
     height:auto;
 }
+
+
+footer{
+    width:100%:
+    height:auto;
+    background-color: #545454;
+}
