--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: #f4f4f4;
+background-color: rgb(233, 230, 224);
 font-family: Arial, sans-serif;
 }
 header{
@@ -12,12 +12,13 @@ header{
     width:100%;
     height: auto;
     align-items:center;
-    font-size:large;
+    font-size:1rem;
     font-weight:bold;
     color:white;
-    padding: 10px 10px 10px 30px;
+    padding: 10px 10px 10px 15px;
+    z-index:1000;
 }
-header img{
+.logo{
     width:100px;
 }
 nav{
@@ -53,13 +54,60 @@ nav a:hover{
 }
 
 .banner{
+    display:flex;
+    background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%), url("../banner.jpg");
+    min-height:400px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat:no-repeat;
+    background-size: cover;
     width:100%;
-    height:auto;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    text-shadow:2px 2px 4px #000000;
+    font-size: larger;
+}
+section{
+    display:flex;
+    gap:20px;
+    margin:20px;
+    gap:150px;
+}
+.desc{
+    display:flex;
+    margin-left:30px;
+    margin-top:20px;
+    flex-direction: column;
+    gap:10px;
+    color:#000000;
+}
+.desc h1{
+    font-size:2rem;
+}
+.desc h3{
+    font-weight:normal;
+}
+.collage{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    margin-right:50px;
+}
+.collage img{
+    width:auto;
+    height:120px;
+    margin:10px 10px 10px 10px;
+    border-radius:10%;
 }
 
-
 footer{
-    width:100%:
+    display:flex;
+    width:100%;
     height:auto;
     background-color: #545454;
+    padding:10px 10px 10px 10px;
+    color:white;
+    text-align:flex-start;
+    flex-direction: column;
 }
