--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ nav a:hover{
 
 .banner{
     display:flex;
-    background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%), url("assets/banner.jpg");
+    background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%), url("../assets/banner.jpg");
     min-height:400px;
     background-attachment: fixed;
     background-position: center;
@@ -105,7 +105,7 @@ section{
     width:100%;
     height:auto;
     padding:20px 20px 20px 20px;
-    background-image: radial-gradient(rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("assets/banner.jpg");
+    background-image: radial-gradient(rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("../assets/banner.jpg");
 
 
 
