--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ section{
     flex-direction: column;
     gap:10px;
     color:#000000;
+    max-width:300px;
 }
 .desc h1{
     font-size:2rem;
@@ -96,7 +97,7 @@ section{
 }
 .collage img{
     width:auto;
-    height:120px;
+    height:200px;
     margin:10px 10px 10px 10px;
     border-radius:10%;
 }
@@ -106,16 +107,17 @@ section{
     height:auto;
     padding:20px 20px 20px 20px;
     background-image: radial-gradient(circle at center, rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("../assets/banner.jpg");
-    flex-direction:column;
+    flex-direction:row;
 }
 .founderbox{
-    display:Flex;
+    display:flex;
     width:100%
     height:auto;
     align-items:center;
     justify-content:center;
     gap:30px;
     padding:20px 20px 20px 20px;
+    flex-direction:column;
 }
 .founderbox img{
     width:200px;
