--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,12 @@ section{
     height:auto;
     padding:20px 20px 20px 20px;
     background-image: radial-gradient(circle at center, rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("../assets/banner.jpg");
+    flex-direction:column;
+}
+.founderlist{
+    display:flex;
     flex-direction:row;
+    gap:30px;
 }
 .founderbox{
     display:flex;
@@ -115,7 +120,6 @@ section{
     height:auto;
     align-items:center;
     justify-content:center;
-    gap:30px;
     padding:20px 20px 20px 20px;
     flex-direction:column;
 }
