Add centering styles to founderlist and founderbox

--- a/css/style.css
+++ b/css/style.css
@@ -108,11 +108,15 @@ section{
     padding:20px 20px 20px 20px;
     background-image: radial-gradient(circle at center, rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("../assets/banner.jpg");
     flex-direction:column;
+    align-items:center;
+    justify-content:center;
 }
 .founderlist{
     display:flex;
     flex-direction:row;
     gap:30px;
+    justify-content:center;
+    align-items:center;
 }
 .founderbox{
     display:flex;
