--- a/css/animation.css
+++ b/css/animation.css
@@ -1,3 +1,12 @@
-@keyframes Template {
+@keyframes fade {
+0% {opacity: 1;}
+50% {opacity: 0;}
+100% {opacity: 1;}
+}
 
+.fade{
+    animation: fade 0.5s ease-in-out;
+}
+@keyframes pulse {
+50% {transform: scale(1.5);}
 }
