--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
 body {
 background-color: rgb(233, 230, 224);
-font-family: Arial, sans-serif;
+font-family: 'Times New Roman', Times, serif;
 }
 header{
     position:sticky;
     display:flex;
-    justify-content: flex-start;
-    gap:120px;
+    justify-content: space-between;
     top:0;
     background-color: #545454;
     width:100%;
     height: auto;
     align-items:center;
-    font-weight:bold;
     color:white;
     padding: 10px 10px 10px 15px;
     z-index:1000;
@@ -22,13 +20,13 @@ header{
 }
 nav{
     display:flex;
-    gap:20px;
+    gap:25px;
 }
 .navtext {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 20px;
+    justify-content: center;
 }
 .navtext h2 {
     margin: 0;           
@@ -38,16 +36,18 @@ nav{
 
 .navtext h4 {
     margin: 0;          
-    font-size: 15px;     
+    font-size: 17px;     
     color: #ddd;         
 }
 
 nav a{
+    font-weight:bold;
     text-decoration:none;
     color:white;
     transition: color 0.5s;
     height:auto;
     font-size:20px;
+    max-width:100px;
 }
 nav a:hover{
     color:#ffcc00;
@@ -66,28 +66,37 @@ nav a:hover{
     justify-content:center;
     color:white;
     text-shadow:2px 2px 4px #000000;
-    font-size: larger;
+    font-size: 40px;
 }
 section{
     display:flex;
     gap:20px;
-    margin:20px;
-    gap:150px;
+    padding:20px;
+    justify-content:space-between;
 }
 .desc{
     display:flex;
     margin-left:30px;
     margin-top:20px;
     flex-direction: column;
-    gap:10px;
     color:#000000;
-    max-width:300px;
 }
 .desc h1{
-    font-size:2rem;
+    font-size:42px;
+    max-width:475px;
+}
+.desc h1::after{
+    content:"";
+    display:block;
+    width:100px;
+    height:5px;
+    border-top: 3px solid brown;
+    border-bottom: 3px solid brown;
+    margin-top:20px;
 }
 .desc h3{
     font-weight:normal;
+    max-width:430px;
 }
 .collage{
     display:flex;
@@ -96,12 +105,12 @@ section{
     margin-right:50px;
 }
 .collage img{
-    width:auto;
-    height:200px;
+    width:250px;
+    height:150px;
     margin:10px 10px 10px 10px;
     border-radius:10%;
 }
-.founders{
+.founder{
     display:flex;
     width:100%;
     height:auto;
@@ -115,27 +124,88 @@ section{
     display:flex;
     flex-direction:row;
     gap:30px;
-    justify-content:center;
-    align-items:center;
+    align-items:flex-start;
 }
 .founderbox{
-    display:flex;
-    width:100%
-    height:auto;
-    align-items:center;
-    justify-content:center;
+    height: auto;
+    text-align:center;
     padding:20px 20px 20px 20px;
     flex-direction:column;
+    max-width: 200px;
 }
 .founderbox img{
     width:200px;
     height:100px;
     border-radius:20px;
 }
+.timeline{
+    align-items:center;
+    justify-content:center;
+    display:flex;
+    flex-direction:column;
+}
+.timeline h1{
+    font-weight:normal;
+}
+.timeline_line{
+    display:flex;
+    flex-direction:row;
+    width:auto;
+    padding: 20px 50px 20px 50px;
+    justify-content:center;
+    position:relative;
+}
 
-
-
-
+.timeline_line::before {
+  content: "";
+  position:absolute;
+  left: 0;
+  right: 0;
+  top:20%;
+  height: 3px;
+  width:100%;
+  background: black;
+  pointer-events: none;
+  z-index:-1;
+}
+.step{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:200px;
+}
+.step h3{
+    font-weight:normal;
+    font-size:25px;
+}
+.point{
+  width:10px;
+  height:10px;
+  background-color: white;
+  border: 3px solid black;
+  border-radius:50%;
+  text-align:center;
+}
+.point.active{
+    background-color:yellow;
+    animation:pulse 0.5s ease-in-out;
+}
+.timeline_box{
+    display:flex;
+    background-color:bisque;
+    border-radius:20px;
+    flex-direction:column;
+    padding: 30px 30px 30px 30px;
+    margin: -40px 95px 50px 65px;
+}
+.timeline_title{
+    font-weight:bold;
+    font-size:30px;
+    margin-bottom:20px;
+}
+.timeline_desc{
+    font-size:20px;
+}
 footer{
     display:flex;
     width:100%;
