--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ section{
   border: 4px solid black;
   border-radius:50%;
   text-align:center;
+  cursor:pointer;
 }
 .point.active{
     background-color:yellow;
