--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header{
     color:white;
     padding: 10px 10px 10px 15px;
     z-index:1000;
+    margin:0;
 }
 .logo{
     width:100px;
@@ -67,6 +68,7 @@ nav a:hover{
     color:white;
     text-shadow:2px 2px 4px #000000;
     font-size: 40px;
+    margin:0;
 }
 section{
     display:flex;
@@ -112,7 +114,6 @@ section{
 }
 .founder{
     display:flex;
-    width:100%;
     height:auto;
     padding:20px 20px 20px 20px;
     background-image: radial-gradient(circle at center, rgb(0,0,0,0)20%,rgb(0,0,0,0.8)100%),url("../assets/banner.jpg");
@@ -135,7 +136,7 @@ section{
 }
 .founderbox img{
     width:200px;
-    height:100px;
+    height:500px;
     border-radius:20px;
 }
 .timeline{
