--- a/css/style.css
+++ b/css/style.css
@@ -253,8 +253,9 @@ footer{
     align-items:center;
     padding:20px 20px 20px 20px;
     justify-content:center;
-    border-top:3px solid black;
-    border-bottom:3px solid black;
 }
-.layanan h1{
-}
+.line{
+    width:100%;
+    height:1px;
+    border:3px solid black;
+    margin:20px 0 20px 0;
