--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,14 @@ footer{
     padding:20px 20px 20px 20px;
     justify-content:center;
 }
+.layanan h1::after{
+    content:"";
+    display:block;
+    width:100px;
+    height:5px;
+    border-top: 3px solid brown;
+    border-bottom: 3px solid brown;
+    margin-top:20px;
 .line{
     width:100%;
     height:1px;
