--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ footer{
     border-top: 3px solid brown;
     border-bottom: 3px solid brown;
     margin-top:20px;
+    align-items:center;
 .line{
     width:100%;
     height:1px;
