--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,7 @@ footer{
     border-bottom: 3px solid brown;
     margin-top:20px;
     align-items:center;
+    margin-left:25%;
 .line{
     width:100%;
     height:1px;
