--- a/css/style.css
+++ b/css/style.css
@@ -138,13 +138,18 @@ section{
     padding:20px 20px 20px 20px;
     flex-direction:column;
     max-width: 200px;
-    color:white;
+    color:black;
     font-family:'Trebuchet MS';
 }
 .founderbox img{
     width:200px;
     height:250px;
     border-radius:20px;
+}
+.namebox{
+    background-color:white;
+    border-radius:15%;
+    padding:5px 20px 5px 20px;
 }
 .timeline{
     align-items:center;
@@ -223,7 +228,8 @@ section{
     justify-content:center;
     display:flex;
     color:black;
-    flex-direction:column;
+    flex-direction:row;
+    padding:20px 50px 20px 50px;
 }
 .visi img {
     width:500px;
@@ -242,8 +248,15 @@ section{
     font-weight:bold;
     margin-bottom:3px;
 }
+.visi h2 {
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom:3px;
+}
 .visi h3 {
     font-size:20px;
+    font-weight:normal;
+    max-width:1000px;
 }
 
 footer{
