--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,10 @@ section{
 .namebox{
     background-color:white;
     border-radius:15%;
-    padding:5px 20px 5px 20px;
+    padding:5px 0 5px 0;
+    color:black;
+    width:180px;
+    height:auto;
 }
 .timeline{
     align-items:center;
