--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,12 @@ section{
 }
 .namebox{
     background-color:white;
-    border-radius:15%;
-    padding:5px 0 5px 0;
+    border-radius:10px;
+    padding:5px 20px 5px 20px;
     color:black;
     width:180px;
     height:auto;
+    align-items:center;
 }
 .timeline{
     align-items:center;
