--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*general*/
 html {
     scroll-behavior: smooth;
 }
@@ -88,7 +89,7 @@ section {
     padding: 20px;
     justify-content: space-between;
 }
-
+/*beranda*/
 .desc {
     display: flex;
     margin-left: 30px;
@@ -332,6 +333,7 @@ footer {
     height: 30px;
 }
 
+/*layanan*/
 .layanan {
     display: flex;
     flex-direction: column;
@@ -351,7 +353,14 @@ footer {
     margin-top: 20px;
     align-items: center;
 }
-
+.layanan h3{
+    display:flex;
+    height:auto;
+    max-width:100%;
+    justify-content:center;
+    font-weight:normal;
+    font-size:20px;
+}
 .line {
     width: 100%;
     height: 1px;
@@ -359,6 +368,7 @@ footer {
     margin: 20px 0 20px 0;
 }
 
+/*tiket*/
 h2 {
     text-align: center;
     margin-top: 30px;
