--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin:0;
 }
 
 .founderlist {
@@ -154,7 +155,7 @@ section {
     text-align: center;
     padding: 20px 20px 20px 20px;
     flex-direction: column;
-    max-width: 200px;
+    max-width: 300px;
     color: black;
     font-family: 'Trebuchet MS';
 }
