--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ section {
     text-align: center;
     padding: 20px 20px 20px 20px;
     flex-direction: column;
-    max-width: 300px;
+    max-width:300px;
     color: black;
 }
 
@@ -287,6 +287,7 @@ section {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 3px;
+    width:90%;
 }
 
 .visi h2 {
@@ -298,12 +299,11 @@ section {
 .visi h3 {
     font-size: 20px;
     font-weight: normal;
-    max-width: 200px;
+    max-width: 500px;
 }
 .visi h4{
     font-size:20px;
     font-weight:normal;
-    max-width:200px;
 }
 
 footer {
@@ -368,10 +368,9 @@ footer {
     font-size:20px;
 }
 .line {
-    width: 100%;
-    height: 1px;
-    border: 3px solid black;
-    margin: 20px 0 20px 0;
+    width: 80%;
+    border-top: 3px solid maroon;
+    margin: 20px 0 20px 10%;
 }
 
 /*tiket*/
