--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ footer {
 .layanan h1::after {
     content: "";
     display: block;
-    width: 200px;
+    width: 100%;
     height: 5px;
     border-top: 3px solid brown;
     border-bottom: 3px solid brown;
@@ -365,7 +365,7 @@ footer {
     max-width:100%;
     justify-content:center;
     font-weight:normal;
-    font-size:20px;
+    font-size:16px;
 }
 .line {
     width: 80%;
@@ -468,3 +468,24 @@ input, select {
         margin-top: 20px;
     }
 }
+  .trophyimg{
+    height:200px; 
+    width:300px;
+    border-radius:10px;
+  }
+    .mapimg{
+    height:190px; 
+    width:350px;
+    border-radius:10px;
+  }
+    table {
+    width: 80%;
+    border-collapse: collapse;
+    margin-bottom: 15px;
+    justify-content:center;
+    margin-left:10%;
+    }
+    .tabletext{
+        width:320px;
+        padding-left:15%;
+    }
