--- a/css/style.css
+++ b/css/style.css
@@ -304,14 +304,29 @@ section {
 .visi h4{
     font-size:20px;
     font-weight:normal;
+}.textcontain {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px 50px;
+    width: 90%;
+    margin: 0 auto;
+    list-style-position: inside;
+    padding: 0;
 }
-.textcontain{
-    display:flex;
-    gap:50px;
-    justify-content:center;
+
+.text {
+    width: 100%;
 }
-.text{
- width:300px;
+
+.text h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.text h3 {
+    font-weight: normal;
+    font-size: 18px;
 }
 footer {
     display: flex;
