--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,21 @@ nav a:hover {
     text-shadow: 2px 2px 4px #000000;
     font-size: 40px;
     margin: 0;
+    overflow: hidden;
 }
+
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    animation: slide 9s infinite;
+    opacity: 0;
+}
+
+.banner img:nth-child(1) { animation-delay: 0s; }
+.banner img:nth-child(2) { animation-delay: 3s; }
+.banner img:nth-child(3) { animation-delay: 6s; }
 
 section {
     display: flex;
