--- a/css/animation.css
+++ b/css/animation.css
@@ -10,3 +10,9 @@
 @keyframes pulse {
 50% {transform: scale(1.5);}
 }
+@keyframes slide {
+    0% { opacity: 1; }
+    33% { opacity: 1; }
+    34% { opacity: 0; }
+    100% { opacity: 0; }
+}
