--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ nav a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
+    position: relative;
     animation: slide 9s infinite;
     opacity: 0;
 }
