--- a/css/animation.css
+++ b/css/animation.css
@@ -11,8 +11,8 @@
 50% {transform: scale(1.5);}
 }
 @keyframes slide {
-    0% { opacity: 1; }
-    33% { opacity: 1; }
-    34% { opacity: 0; }
-    100% { opacity: 0; }
+    0%   { background-image: url("../assets/banner.jpg"); }
+    33%  { background-image: url("../assets/index.jpeg"); }
+    66%  { background-image: url("../assets/docking.jpg"); }
+    100% { background-image: url("../assets/banner.jpg"); }
 }
