--- a/css/animation.css
+++ b/css/animation.css
@@ -11,8 +11,8 @@
 50% {transform: scale(1.5);}
 }
 @keyframes slide {
-    0%   { background-image: url("../assets/banner.jpg"); }
-    33%  { background-image: url("../assets/index.jpeg"); }
-    66%  { background-image: url("../assets/docking.jpg"); }
-    100% { background-image: url("../assets/banner.jpg"); }
+    0%   { background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%),url("../assets/banner.jpg"); }
+    33%  { background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%),url("../assets/index.jpeg"); }
+    66%  { background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%).url("../assets/docking.jpg"); }
+    100% { background-image: radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7) 100%),url("../assets/banner.jpg"); }
 }
